--- a/css/summary.css
+++ b/css/summary.css
@@ -111,7 +111,7 @@ body {
 .tasksText {
   font-size: 17px;
   text-align: center;
-  font-weight: lighter;
+  font-weight: 400;
   color: #2a3647;
 }
 
